duicontrolpanel (0.7.20~unreleased) unstable; urgency=low

  * changelog

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 20 May 2010 19:48:15 +0300

duicontrolpanel (0.7.19-1) unstable; urgency=low

  * Fixes endless recursion when there is no dbus available
  * Fixes: NB#166112 - DuiControlPanel should apply to swap itself to
    be the toplevel window when DuiControlPanelIf::appletPage
  * Fixes: NB#165815 - Duicontrolpanel calls title function for an
    applet wrongly
  * Fixes: NB#143519 - localization of duicontrolpanel is very outdated
    (Translation catalog name and dependency)
  * Fixes: NB#169767 - Synchronization application is not available in
    system settings
  * Fixes: an applet can not request pages if started through servicefw

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 20 May 2010 16:20:05 +0200

duicontrolpanel (0.7.18) unstable; urgency=low

  * unittest fixes

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 07 May 2010 10:16:34 +0200

duicontrolpanel (0.7.17) unstable; urgency=low

  [ Robert Manner ]
  * Fixes servicefw api regression
  * Deprecated classes: DcpButton*, DcpBriefWidget. MContentItem and
    MContentItem based DcpContentItem replaces them
  * Fixes: false return at DcpWidget::back() was not taken into account (the
    page got destroyed either ways)
  * Adds API for closing the appletpage from DcpWidget
  * Some visual updates according to the ui spec: no space and separator
    between contentitems, one column lists

  [ Sandor Pinter ]
  * Using clean-device-dev package to get the RFS script dir

 -- Sandor Pinter <sandor.pinter@blumsoft.eu>  Thu, 06 May 2010 11:53:38 +0200

duicontrolpanel (0.7.16) unstable; urgency=low

  * fixes compilation issue

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 20 Apr 2010 17:29:36 +0200

duicontrolpanel (0.7.15) unstable; urgency=low

  * Fixes: 162708 - The most recent used container is smaller than the other
    categories container